Add author 'Jay Prakash Kumar' and MIT License to all files

--- a/src/com/yourcompany/invoicesystem/resources/messages_en.properties
+++ b/src/com/yourcompany/invoicesystem/resources/messages_en.properties
@@ -1,3 +1,7 @@
+# Author: Jay Prakash Kumar
+# Copyright (c) 2025
+# Licensed under MIT License
+
 # English Resource Bundle
 # Application Messages and Labels
 
@@ -192,3 +196,4 @@ about.title=About
 about.version=Version 2.0
 about.description=ProBilling Invoice Management System
 about.copyright=© 2025 Your Company. All rights reserved.
+
