--- a/src/com/yourcompany/invoicesystem/resources/messages_es.properties
+++ b/src/com/yourcompany/invoicesystem/resources/messages_es.properties
@@ -1,3 +1,7 @@
+# Author: Jay Prakash Kumar
+# Copyright (c) 2025
+# Licensed under MIT License
+
 # Spanish Resource Bundle
 # Mensajes y Etiquetas de la Aplicación
 
@@ -192,3 +196,4 @@ about.title=Acerca de
 about.version=Versión 2.0
 about.description=Sistema de Gestión de Facturas ProBilling
 about.copyright=© 2025 Su Empresa. Todos los derechos reservados.
+
