--- a/src/com/yourcompany/invoicesystem/resources/messages_fr.properties
+++ b/src/com/yourcompany/invoicesystem/resources/messages_fr.properties
@@ -1,3 +1,7 @@
+# Author: Jay Prakash Kumar
+# Copyright (c) 2025
+# Licensed under MIT License
+
 # French Resource Bundle
 # Messages et Étiquettes de l'Application
 
@@ -192,3 +196,4 @@ about.title=À propos
 about.version=Version 2.0
 about.description=Système de Gestion de Facturation ProBilling
 about.copyright=© 2025 Votre Entreprise. Tous droits réservés.
+
